daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N20_missing_required_log/h0.hex
3907048cbb2bba166b0014aedd7db907fdeaa0205969e89ef4726051c95581bd206921a511765a2d2d0a901f34a2d506d9e1eadb4d2daa8f574eba5068d928c6
